[gd_scene load_steps=9 format=3 uid="uid://bkbu5snew2mj1"]

[ext_resource type="Script" uid="uid://dgas80higkixl" path="res://scenes/stat_display.gd" id="1_52sky"]
[ext_resource type="PackedScene" uid="uid://ct4040pqhvgjk" path="res://scenes/pause_menu.tscn" id="1_mwlbc"]
[ext_resource type="Script" uid="uid://c11vkyefiiejw" path="res://scenes/signalHandler.gd" id="1_sfojw"]
[ext_resource type="Texture2D" uid="uid://b7vx65thm5yqm" path="res://icon.svg" id="1_wy1qo"]
[ext_resource type="Script" uid="uid://dlw07215b8i8r" path="res://inventory/inventory_controller.gd" id="2_52sky"]
[ext_resource type="Script" uid="uid://boanld6qdjvoa" path="res://inventory/change_inventory.gd" id="3_mwlbc"]
[ext_resource type="Texture2D" uid="uid://t6der1cdgwd8" path="res://assets/coins.png" id="4_sfojw"]
[ext_resource type="Texture2D" uid="uid://b8xtkifdktix2" path="res://assets/Minerals.png" id="5_5kiu8"]

[node name="Display" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sfojw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 51

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("1_mwlbc")]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CounterDisplay" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Buy Factory" type="Button" parent="CanvasLayer/VBoxContainer/CounterDisplay"]
layout_mode = 2
text = "Buy Factory"

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/CounterDisplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stats" type="BoxContainer" parent="CanvasLayer/VBoxContainer/CounterDisplay"]
layout_mode = 2

[node name="Money" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/CounterDisplay/Stats"]
layout_mode = 2
script = ExtResource("1_52sky")
texture = ExtResource("4_sfojw")
Name = "Money"

[node name="Minerals" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/CounterDisplay/Stats"]
layout_mode = 2
script = ExtResource("1_52sky")
texture = ExtResource("5_5kiu8")
Name = "Minerals"

[node name="Control2" type="Control" parent="CanvasLayer/VBoxContainer/CounterDisplay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inventory" type="ItemList" parent="CanvasLayer/VBoxContainer/CounterDisplay" node_paths=PackedStringArray("stats")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_52sky")
placeholder_icon = ExtResource("1_wy1qo")
stats = NodePath("../Stats")

[node name="Sell" type="Button" parent="CanvasLayer/VBoxContainer/CounterDisplay" node_paths=PackedStringArray("inventory")]
layout_mode = 2
text = "Sell"
script = ExtResource("3_mwlbc")
inventory = NodePath("../Inventory")

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control2" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control3" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control4" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control5" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control6" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control7" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control8" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="CanvasLayer/VBoxContainer/CounterDisplay/Buy Factory" to="." method="_on_buy_factory_pressed"]
[connection signal="focus_exited" from="CanvasLayer/VBoxContainer/CounterDisplay/Inventory" to="CanvasLayer/VBoxContainer/CounterDisplay/Sell" method="_on_inventory_focus_exited"]
[connection signal="item_clicked" from="CanvasLayer/VBoxContainer/CounterDisplay/Inventory" to="CanvasLayer/VBoxContainer/CounterDisplay/Sell" method="_on_inventory_item_clicked"]
[connection signal="item_selected" from="CanvasLayer/VBoxContainer/CounterDisplay/Inventory" to="CanvasLayer/VBoxContainer/CounterDisplay/Sell" method="_on_inventory_item_selected"]
[connection signal="update_sell_price" from="CanvasLayer/VBoxContainer/CounterDisplay/Inventory" to="CanvasLayer/VBoxContainer/CounterDisplay/Sell" method="_on_inventory_update_sell_price"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/CounterDisplay/Sell" to="CanvasLayer/VBoxContainer/CounterDisplay/Sell" method="_on_pressed"]
